Create basic app
